Revision history for Perl extension Catalyst::Plugin::Static::Simple

0.34   2017-08-02 09:56 Los Angeles
       - Remove MYMETA.* (RT#108814)
       - Fix installing on 5.26.0+ (RT#121861)
       - Fix security vulnerability, when serving static files with dots in the
         names (RT#120558)
       - Fix typo in POD (RT#87098)

0.33   2014-09-26 17:00 BST
       - In the case where someone is trying to merge configurations
       and some config sets use the depracated 'static' keyword, the
       configs will be properly merged.

0.32   2014-06-04 17:00 EDT
        - Sets 'autoflush' in the Catalyst Log object to false if 
          available. This is a new API being added in Catalyst as of
          version 5.90065

0.31   2013-09-09 16:30:00
        - Updated docs to reflect config key change from 'static' to
          'Plugin::Static::Simple' (RT#77709)
        - Migrated repository from subversion to git
        - Fixed MIME::Types 2.xx compatibility be removing call to an
          undocumented method
        - Bumped the MIME::Types requirement to 2.03 to ensure its
          improvements make it into Catalyst environments

0.30   2012-05-04 17:05:00
        - Add Cache-Control:public header
        - Optionally provide Expires header
        - Change configuration key to 'Plugin::Static::Simple' by default.
          The old 'static' key is still supported, but issues a warning.

0.29   2010-02-01 18:45:00
        - Switch from override to around, because really, wtf

0.28   2010-01-04 13:15:00
        - Fix issues in debug mode. (RT#53338)

0.27   2010-01-03 14:49:00
        - Switch to being a Moose role, removing dependencies on
          Class::Data::Inheritable and Class::Accessor (Andrey Kostenko in
          RT#51089)
        - Make Pod tests mandatory for authors but never run otherwise
        - Switch to Test::NoTabs to ensure no tabs, rather than
          Test::Perl::Critic

0.26   2009-12-06 12:30:00