@@ -1,5 +1,7 @@
 Revision history for Perl extension Catalyst::Plugin::Static::Simple
 
+       - Use less-likely extension for unknown file type (RT#124211)
+
 0.34   2017-08-02 09:56 Los Angeles
        - Remove MYMETA.* (RT#108814)
        - Fix installing on 5.26.0+ (RT#121861)
